# fund-risk-workflow

./: .gitignore  CLAUDE.md  README.md  REDEMPTION_FRAMEWORK_AUDIT.md  REFACTOR_ALGN_NB_PRESENTATION.md  REFACTOR_DIAGNOSTIC.md  RUNBOOK.md  database.py  generate_positions.py  pyproject.toml  runbook.md
docs/: ARCHITECTURE_TARGET.md  CLAUDE_REFACTOR_PLAYBOOK.md  REFACTOR_LOG.md  UCITS_FAST_PASS_REPORT.md  UCITS_SLICE1_FINAL_SUMMARY.md  UCITS_SLICE1_REFACTOR_REPORT.md  UCITS_WRAPPER_IMPLEMENTATION.md
docs/notebooks_notes/: aifm_comment.md  infra.md  liquidity_references.md  pe_buyout.md  private_debt.md  real_estate.md  ucits_balanced.md
docs/schemas/: reference_data_schema.md
manco_risk_mngmt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: aifm_hedge_fund.ipynb  aifm_infra_ fund.ipynb  aifm_pe_buyout.ipynb  aifm_private_debt.ipynb  aifm_real_estate.ipynb  board_risk_report.ipynb  data_pipeline.ipynb  liquidity_fund_risk.ipynb  liquidity_management.ipynb  ucits_balanced.ipynb  ucits_priips_kid.ipynb
notebooks/data_workflows/: 01_data_layer_workflow.ipynb  02_data_pipeline.ipynb  02_operational_checks.ipynb
notebooks/funds/: aifm_hedge_fund.ipynb  aifm_infra_fund.ipynb  aifm_pe_buyout.ipynb  aifm_private_debt.ipynb  aifm_real_estate.ipynb  ucits_balanced.ipynb
reference_data/: esg_scores.json  fund_master.json  ticker_map.json
reference_data/funds/: fund_master.json  (+2 more)
scripts/: clean_data_outputs.py  refactor_ucits_fast_pass.py  refactor_ucits_slice1.py
src/: annex_iv.py  annex_iv_export.py  annex_vi_export.py  board_report.py  config.py  database.py  enrichment.py  esg_utils.py  generate_daily_export.py  generate_infra_fund.py  generate_pe_fund.py  generate_positions.py  infra_utils.py  mock_bloomberg.py  nb_utils.py  pe_utils.py  plot_style.py  print_html_utils.py  print_utils.py  risk_utils.py  setup_db.py  validate_pipeline.py
tests/: test_annex_iv.py  test_daily_workflow.py  test_database.py  test_derivative_contracts.py  test_derivative_exposure_helper.py  test_enrichment.py  test_esg_derivative_integration.py  test_esg_utils.py  test_generate_daily_export.py  test_generate_pe_fund.py  test_generate_positions.py  test_infra_utils.py  test_leverage_helper_integration.py  test_liquidity_calibration_weights.py  test_mock_bloomberg.py  test_operational_checks.py  test_pe_utils.py  test_risk_utils.py  test_setup_db.py  test_ucits_wrappers.py
(+144 files in other folders)
