[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-risk-workflow"
version = "0.1.0"
description = "Notebook-led fund risk workflows for UCITS and AIFMD-style portfolios using simulated data"
authors = [
    {name = "mrspatbile", email = "mrspatbile@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "sqlalchemy",
    "openpyxl",
    "yfinance",
    "ipykernel",
    "jupyterlab",
    "nbstripout",
    "pytest",
    "reportlab",
    "dataframe_image",
    "playwright",   # for saving html artifacts
    "chromium",     # for saving html artifacts
    "nest_asyncio", # for saving html artifacts

]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fund_risk_workflow*"]

[tool.ruff]
exclude = ["notebooks/"]

[tool.ruff.lint]
extend-ignore = []
